added util function for adding using bisection

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -3364,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "# TODO: I should also try to consolidate pivots that are really close -> invest on the first one\n",
@@ -3379,6 +3379,29 @@
     "def investment_extremes(pivot_lower, pivot_higher, stock):\n",
     "    interval = stock.iloc[pivot_lower:pivot_higher+1]\n",
     "    return (interval.iloc[-1]-interval.iloc[0])/interval.iloc[0],(interval.max()-interval.iloc[0])/interval.iloc[0],(interval.min()-interval.iloc[0])/interval.iloc[0]\n",
+    "\n",
+    "# sorted insert with bisection\n",
+    "def bisect_insert(l, insert_me, get_key_func = None):\n",
+    "    lower = 0\n",
+    "    upper = len(l)\n",
+    "\n",
+    "    if get_key_func is not None:\n",
+    "        while lower < upper:\n",
+    "            mid_point = (lower + upper)//2\n",
+    "            if get_key_func(insert_me) < l[mid_point]:\n",
+    "                upper = mid_point\n",
+    "            else:\n",
+    "                lower = mid_point + 1\n",
+    "    else:\n",
+    "        while lower < upper:\n",
+    "            mid_point = (lower + upper)//2\n",
+    "            if insert_me < l[mid_point]:\n",
+    "                upper = mid_point\n",
+    "            else:\n",
+    "                lower = mid_point + 1\n",
+    "    l.insert(lower, insert_me)\n",
+    "    return l\n",
+    "\n",
     "\n",
     "\n",
     "# investment for stock\n",
@@ -3458,6 +3481,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 3, 4, 5, 6, 7]"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,3,5,6,7]\n",
+    "bisect_insert(l,4)\n",
+    "#print(l)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "outputs": [],
    "source": [
@@ -3524,8 +3572,25 @@
     "            return self.capital_buy_and_hold\n",
     "\n",
     "\n",
-    "    def ga_strategy(self):\n",
-    "        pass\n"
+    "    def ga_pivot_strategy(self, pivots, computed_pivots, amount_of_capital_per = 0.01):\n",
+    "        trades = OrderedDict()\n",
+    "        trades_per_stock = {}\n",
+    "        active_investments = []\n",
+    "        curr_capital = self.capital[0]\n",
+    "        # populate all trades\n",
+    "        for t in self.tickers:\n",
+    "            trades_per_stock[t] = investment_based_on_pivots(percent = 10, stock =  self.tickers[t], pivots = pivots, pivots_computed = computed_pivots)\n",
+    "\n",
+    "        trade_iterators = {t : trades_per_stock[t].__iter__() for t in trades_per_stock}\n",
+    "        # gives us on which day we currently are on\n",
+    "        lowest = 0\n",
+    "        # holds trade end date and amount gained (trade_end, gain)\n",
+    "        list_of_active_trades = []\n",
+    "        # ordered dict to keep tabs on portfolio growth, {day_index : capital}\n",
+    "        capital_size = {0 : curr_capital}\n",
+    "        # go through these trades and simulate investment\n",
+    "        while():\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
