untested metrix completed

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1509,8 +1509,76 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def metric_based_on_pool(pivots, pivots_gd,  leeway):\n",
-    "    "
+    "def metric_based_on_pool(pivots, pivots_gd, opens, leeway = 0.03, penalty = 0.01):\n",
+    "    it = 0\n",
+    "    firsto = True\n",
+    "    best_score = 0\n",
+    "    overall = 0\n",
+    "\n",
+    "    for p in pivots:\n",
+    "        if pivots_gd[it] <= p < pivots_gd[it+1]:\n",
+    "            # do_sth\n",
+    "            if leeway >= abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
+    "                if firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
+    "                    best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
+    "                elif not firsto:\n",
+    "                    overall = overall + best_score\n",
+    "                    best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
+    "                    firsto = True\n",
+    "\n",
+    "            elif abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]] <= leeway:\n",
+    "                if firsto:\n",
+    "                    overall = overall + best_score\n",
+    "                    best_score =  1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
+    "                    firsto = False\n",
+    "                elif not firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]:\n",
+    "                    best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
+    "            else:\n",
+    "                overall = overall - penalty\n",
+    "        elif pivots_gd[-1] <= p < len(opens):\n",
+    "            # do_sth\n",
+    "            if abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]] <= leeway:\n",
+    "\n",
+    "                if leeway >= abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
+    "                    if firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
+    "                        best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
+    "                    elif not firsto:\n",
+    "                        overall = overall + best_score\n",
+    "                        best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
+    "                        firsto = True\n",
+    "\n",
+    "                elif abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p] <= leeway:\n",
+    "                    if firsto:\n",
+    "                        overall = overall + best_score\n",
+    "                        best_score =  1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]\n",
+    "                        firsto = False\n",
+    "                    elif not firsto and best_score < 1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]:\n",
+    "                        best_score = 1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]\n",
+    "                else:\n",
+    "                    overall = overall - penalty\n",
+    "        else:\n",
+    "            # fix pivots\n",
+    "            for it in range(it,len(pivots_gd)):\n",
+    "                if pivots_gd[it] <= p < pivots_gd[it+1]:\n",
+    "                    if leeway >= abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
+    "                        if firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
+    "                            best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
+    "                        elif not firsto:\n",
+    "                            overall = overall + best_score\n",
+    "                            best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
+    "                            firsto = True\n",
+    "\n",
+    "                    elif abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]] <= leeway:\n",
+    "                        if firsto:\n",
+    "                            overall = overall + best_score\n",
+    "                            best_score =  1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
+    "                            firsto = False\n",
+    "                        elif not firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]:\n",
+    "                            best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
+    "                    else:\n",
+    "                        overall = overall - penalty\n",
+    "                    break\n",
+    "    return overall"
    ],
    "metadata": {
     "collapsed": false,
