added description now testing

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1497,8 +1497,8 @@
    "cell_type": "markdown",
    "source": [
     "change the metrix so it looks for values close by:\n",
-    "-if its within 5% of the pivot it should count as a hit with a bit of a penalty\n",
-    "-if there are multiple within 5% of the pivot only the closest should count"
+    "-if its within leeway% of the pivot it should count as a hit with a bit of a penalty\n",
+    "-if there are multiple within leeway% of the pivot only the closest should count"
    ],
    "metadata": {
     "collapsed": false
@@ -1506,10 +1506,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "outputs": [],
    "source": [
-    "def metric_based_on_pool(pivots, pivots_gd, opens, leeway = 0.03, penalty = 0.01):\n",
+    "def metric_based_on_pool(pivots: list, pivots_gd: list, opens: pd.DataFrame, leeway: float = 0.03, penalty: float = 0.01) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculates metric based on best close pivot to ground truth pivot\n",
+    "    :param pivots: pivots given by model\n",
+    "    :param pivots_gd: ground truth pivots\n",
+    "    :param opens: stocks opens history\n",
+    "    :param leeway: percentage allowed for pivot missing the gorund truth pivot(based of model pivot)\n",
+    "    :param penalty: penalty for completely missing\n",
+    "    :return: overall score\n",
+    "    \"\"\"\n",
     "    it = 0\n",
     "    firsto = True\n",
     "    best_score = 0\n",
