removed the debug prints

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1507,10 +1507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 317,
    "outputs": [],
    "source": [
-    "def metric_based_on_pool(pivots: list, pivots_gd: list, opens: pd.DataFrame, leeway: float = 0.05, penalty: float = 0.01) -> float:\n",
+    "def metric_based_on_pool(pivots: list, pivots_gd: list, opens: pd.DataFrame, leeway: float = 0.03, penalty: float = 0.01) -> float:\n",
     "    \"\"\"\n",
     "    Calculates metric based on best close pivot to ground truth pivot\n",
     "    :param pivots: pivots given by model\n",
@@ -1524,8 +1524,8 @@
     "    firsto = True\n",
     "    best_score = 0\n",
     "    overall = 0\n",
-    "    print(pivots)\n",
-    "    print(pivots_gd)\n",
+    "    #print(pivots)\n",
+    "    #print(pivots_gd)\n",
     "    #init pivots\n",
     "    for i in range(len(pivots)):\n",
     "        if pivots[i] >= pivots_gd[0]:\n",
@@ -1537,11 +1537,11 @@
     "                    best_score = 1 - abs(opens.iloc[i] - opens.iloc[pivots_gd[0]])/opens.iloc[pivots_gd[0]]\n",
     "    \n",
     "    for p in pivots[i:]:\n",
-    "        #print(overall)\n",
+    "        ##print(overall)\n",
     "        if it + 1 < len(pivots_gd) and pivots_gd[it] <= p < pivots_gd[it+1]:\n",
     "            # do_sth\n",
     "            if leeway >= abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
-    "                print(\"uno\")\n",
+    "                #print(\"uno\")\n",
     "                if firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
     "                    best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
     "                elif not firsto:\n",
@@ -1550,7 +1550,7 @@
     "                    firsto = True\n",
     "\n",
     "            elif abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]] <= leeway:\n",
-    "                print(\"dos\")\n",
+    "                #print(\"dos\")\n",
     "                if firsto:\n",
     "                    overall = overall + best_score\n",
     "                    best_score =  1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
@@ -1558,13 +1558,13 @@
     "                elif not firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]:\n",
     "                    best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
     "            else:\n",
-    "                print(\"hiya\")\n",
+    "                #print(\"hiya\")\n",
     "                overall = overall - penalty\n",
     "        elif pivots_gd[-1] <= p < len(opens):\n",
-    "            print(\"uno12\")\n",
+    "            #print(\"uno12\")\n",
     "            # do_sth\n",
     "            if abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]] <= leeway:\n",
-    "                print(\"uno1\")\n",
+    "                #print(\"uno1\")\n",
     "                if leeway >= abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
     "                    if firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
     "                        best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
@@ -1581,17 +1581,17 @@
     "                    elif not firsto and best_score < 1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]:\n",
     "                        best_score = 1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]\n",
     "                else:\n",
-    "                    print(\"hiya\")\n",
+    "                    #print(\"hiya\")\n",
     "                    overall = overall - penalty\n",
     "        else:\n",
     "            # fix pivots\n",
     "\n",
     "            for it in range(it,len(pivots_gd)-1):\n",
-    "                print(it)\n",
+    "                #print(it)\n",
     "                if pivots_gd[it] <= p < pivots_gd[it+1]:\n",
-    "                    print(\"yes\")\n",
+    "                    #print(\"yes\")\n",
     "                    if leeway >= abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
-    "                        print(\"huh?\")\n",
+    "                        #print(\"huh?\")\n",
     "                        if firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]:\n",
     "                            best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it]])/opens.iloc[pivots_gd[it]]\n",
     "                        elif not firsto:\n",
@@ -1600,7 +1600,7 @@
     "                            firsto = True\n",
     "\n",
     "                    elif abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]] <= leeway:\n",
-    "                        print(\"nuuh\")\n",
+    "                        #print(\"nuuh\")\n",
     "                        if firsto:\n",
     "                            overall = overall + best_score\n",
     "                            best_score =  1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
@@ -1608,7 +1608,7 @@
     "                        elif not firsto and best_score < 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]:\n",
     "                            best_score = 1 - abs(opens.iloc[p] - opens.iloc[pivots_gd[it+1]])/opens.iloc[pivots_gd[it+1]]\n",
     "                    else:\n",
-    "                        print(\"hiya\")\n",
+    "                        #print(\"hiya\")\n",
     "                        overall = overall - penalty\n",
     "                    break\n",
     "                elif pivots_gd[-1] <= p < len(opens):\n",
@@ -1630,7 +1630,6 @@
     "                            elif not firsto and best_score < 1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]:\n",
     "                                best_score = 1 - abs(opens.iloc[pivots_gd[it+1]] - opens.iloc[p])/opens.iloc[p]\n",
     "                        else:\n",
-    "                            print(\"hiya\")\n",
     "                            overall = overall - penalty\n",
     "    return overall"
    ],
@@ -1872,403 +1871,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 318,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Int64Index([35, 43, 208, 214, 256, 342, 372, 374, 516, 545, 558, 583, 584, 606, 610, 668, 682, 699, 767, 781, 816, 925, 940, 982, 994, 1018, 1041, 1052, 1119, 1159, 1180, 1200, 1237, 1290, 1340, 1542, 1547, 1552, 1576, 1586, 1604, 1803, 2008, 2074, 2189, 2213, 2888, 2894, 2950, 3119, 3127, 3147, 3156, 3191, 3876, 3898], dtype='int64')\n",
-      "[54, 56, 62, 68, 72, 80, 85, 97, 103, 113, 120, 122, 146, 149, 157, 168, 183, 201, 211, 214, 233, 234, 236, 251, 260, 268, 276, 302, 311, 318, 320, 330, 341, 359, 361, 376, 391, 392, 393, 398, 402, 435, 442, 444, 454, 481, 484, 499, 502, 510, 514, 527, 541, 563, 567, 573, 585, 598, 603, 623, 625, 627, 629, 665, 666, 685, 687, 694, 701, 704, 709, 710, 714, 716, 720, 737, 743, 752, 761, 766, 775, 778, 787, 795, 800, 814, 836, 851, 856, 881, 886, 941, 944, 945, 959, 966, 975, 987, 991, 999, 1013, 1015, 1020, 1022, 1029, 1035, 1043, 1049, 1071, 1079, 1100, 1104, 1138, 1139, 1141, 1145, 1150, 1154, 1170, 1175, 1179, 1180, 1185, 1188, 1197, 1198, 1199, 1208, 1246, 1254, 1256, 1267, 1270, 1275, 1284, 1289, 1295, 1297, 1309, 1319, 1334, 1339, 1374, 1388, 1397, 1427, 1435, 1447, 1475, 1490, 1516, 1534, 1561, 1564, 1566, 1568, 1571, 1575, 1595, 1600, 1611, 1618, 1623, 1627, 1632, 1654, 1658, 1671, 1677, 1699, 1718, 1819, 1844, 1904, 1915, 1951, 1991, 2024, 2027, 2067, 2095, 2155, 2232, 2303, 2324, 2329, 2378, 2452, 2496, 2522, 2543, 2547, 2559, 2579, 2586, 2617, 2649, 2674, 2698, 2735, 2774, 2783, 2865, 2906, 2964, 2966, 2969, 2980, 3035, 3045, 3075, 3080, 3125, 3131, 3146, 3148, 3156, 3165, 3170, 3173, 3175, 3189, 3201, 3208, 3217, 3228, 3236, 3258, 3264, 3309, 3331, 3343, 3371, 3405, 3432, 3464, 3482, 3526, 3621, 3670, 3724, 3739, 3759, 3795, 3858, 3874, 3877, 3885, 3895, 3912, 3932, 3938, 3951, 3953, 4003, 4111, 4128]\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "yes\n",
-      "nuuh\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "yes\n",
-      "huh?\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "yes\n",
-      "hiya\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "yes\n",
-      "hiya\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "yes\n",
-      "hiya\n",
-      "hiya\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "yes\n",
-      "hiya\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "yes\n",
-      "nuuh\n",
-      "dos\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "yes\n",
-      "hiya\n",
-      "hiya\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "yes\n",
-      "hiya\n",
-      "hiya\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "yes\n",
-      "hiya\n",
-      "hiya\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "yes\n",
-      "nuuh\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "yes\n",
-      "hiya\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "yes\n",
-      "hiya\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "yes\n",
-      "hiya\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "yes\n",
-      "hiya\n",
-      "dos\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "yes\n",
-      "huh?\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "yes\n",
-      "hiya\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "yes\n",
-      "nuuh\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "yes\n",
-      "hiya\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "yes\n",
-      "hiya\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "yes\n",
-      "hiya\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "yes\n",
-      "hiya\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "yes\n",
-      "huh?\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "yes\n",
-      "hiya\n",
-      "126\n",
-      "127\n",
-      "yes\n",
-      "hiya\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "yes\n",
-      "hiya\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "yes\n",
-      "nuuh\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "yes\n",
-      "hiya\n",
-      "dos\n",
-      "hiya\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "155\n",
-      "156\n",
-      "157\n",
-      "yes\n",
-      "hiya\n",
-      "dos\n",
-      "157\n",
-      "158\n",
-      "159\n",
-      "yes\n",
-      "hiya\n",
-      "159\n",
-      "160\n",
-      "161\n",
-      "162\n",
-      "163\n",
-      "164\n",
-      "165\n",
-      "166\n",
-      "167\n",
-      "168\n",
-      "169\n",
-      "170\n",
-      "yes\n",
-      "nuuh\n",
-      "170\n",
-      "171\n",
-      "172\n",
-      "173\n",
-      "174\n",
-      "175\n",
-      "176\n",
-      "yes\n",
-      "huh?\n",
-      "176\n",
-      "177\n",
-      "178\n",
-      "179\n",
-      "yes\n",
-      "hiya\n",
-      "179\n",
-      "180\n",
-      "181\n",
-      "yes\n",
-      "hiya\n",
-      "dos\n",
-      "181\n",
-      "182\n",
-      "183\n",
-      "184\n",
-      "185\n",
-      "186\n",
-      "187\n",
-      "188\n",
-      "189\n",
-      "190\n",
-      "191\n",
-      "192\n",
-      "193\n",
-      "194\n",
-      "195\n",
-      "196\n",
-      "197\n",
-      "198\n",
-      "199\n",
-      "200\n",
-      "201\n",
-      "202\n",
-      "yes\n",
-      "hiya\n",
-      "hiya\n",
-      "202\n",
-      "203\n",
-      "yes\n",
-      "hiya\n",
-      "203\n",
-      "204\n",
-      "205\n",
-      "206\n",
-      "207\n",
-      "208\n",
-      "209\n",
-      "210\n",
-      "211\n",
-      "yes\n",
-      "hiya\n",
-      "211\n",
-      "212\n",
-      "yes\n",
-      "nuuh\n",
-      "212\n",
-      "213\n",
-      "214\n",
-      "yes\n",
-      "nuuh\n",
-      "214\n",
-      "215\n",
-      "216\n",
-      "yes\n",
-      "huh?\n",
-      "216\n",
-      "217\n",
-      "218\n",
-      "219\n",
-      "220\n",
-      "221\n",
-      "yes\n",
-      "nuuh\n",
-      "221\n",
-      "222\n",
-      "223\n",
-      "224\n",
-      "225\n",
-      "226\n",
-      "227\n",
-      "228\n",
-      "229\n",
-      "230\n",
-      "231\n",
-      "232\n",
-      "233\n",
-      "234\n",
-      "235\n",
-      "236\n",
-      "237\n",
-      "238\n",
-      "239\n",
-      "240\n",
-      "241\n",
-      "242\n",
-      "243\n",
-      "244\n",
-      "245\n",
-      "yes\n",
-      "nuuh\n",
-      "245\n",
-      "246\n",
-      "247\n",
-      "248\n",
-      "yes\n",
-      "nuuh\n",
-      "9.677443395798692\n",
+      "7.719049955387045\n",
       "251    1.453\n",
       "256    1.312\n",
       "260    1.156\n",
