fixed testing to reset index for comparison

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 322,
    "outputs": [],
    "source": [
     "def metric_based_on_pool(pivots: list, pivots_gd: list, opens: pd.DataFrame, leeway: float = 0.03, penalty: float = 0.01) -> float:\n",
@@ -1524,8 +1524,8 @@
     "    firsto = True\n",
     "    best_score = 0\n",
     "    overall = 0\n",
-    "    #print(pivots)\n",
-    "    #print(pivots_gd)\n",
+    "    print(\"pivots\",pivots)\n",
+    "    print(pivots_gd)\n",
     "    #init pivots\n",
     "    for i in range(len(pivots)):\n",
     "        if pivots[i] >= pivots_gd[0]:\n",
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 326,
    "outputs": [],
    "source": [
     "def fit_params_AUC_lagged_combined_special(df,dfY,tick,percent,n_lagged = 20,sty=0,metric=roc_auc_score, beta = -1):\n",
@@ -1738,7 +1738,9 @@
     "            '(' +col_names[posd[4]] + ' < ' + str(solution[posd[4]]) + d4 +\n",
     "            '(' +col_names[posd[5]] + ' < ' + str(solution[posd[5]]) + '))))))')\n",
     "\n",
+    "\n",
     "        up = test.query(q).index\n",
+    "\n",
     "        res = np.array([False]*len(test))\n",
     "        res[up] =True\n",
     "\n",
@@ -1758,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 341,
    "outputs": [],
    "source": [
     "def fit_params_AUC_lagged_combined_special_test(df,dfY,tick,percent,n_lagged = 20,sty=0,metric=roc_auc_score, beta=-1):\n",
@@ -1857,7 +1859,8 @@
     "            return metric(dfY[tick][percent][1][n_lagged-1:],res,beta=beta)\n",
     "        # -1 is my metric\n",
     "        if beta == -1:\n",
-    "            return metric(up,dfY[tick][percent][1][n_lagged-1:].index[dfY[tick][percent][1][0][n_lagged-1:] == True].tolist(), opens = df[tick][1][n_lagged-1:][\"open\"])\n",
+    "            reseted = dfY[tick][percent][1].reset_index()\n",
+    "            return metric(up,reseted[n_lagged-1:].index[dfY[tick][percent][1][0][n_lagged-1:] == True].tolist(), opens = df[tick][1][n_lagged-1:][\"open\"])\n",
     "        # default is AUC\n",
     "        return metric(dfY[tick][percent][1][n_lagged-1:],res)\n",
     "    return fita"
@@ -1871,13 +1874,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 342,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.719049955387045\n",
+      "      index    0  \n",
+      "0     4224   False\n",
+      "1     4225   False\n",
+      "2     4226   False\n",
+      "3     4227   False\n",
+      "4     4228   False\n",
+      "...     ...    ...\n",
+      "1403  5627   False\n",
+      "1404  5628   False\n",
+      "1405  5629   False\n",
+      "1406  5630   False\n",
+      "1407  5631   False\n",
+      "\n",
+      "[1408 rows x 2 columns]\n",
+      "pivots Int64Index([623], dtype='int64')\n",
+      "[78, 105, 242, 257, 279, 306, 309, 331, 349, 373, 413, 436, 459, 650, 653, 675, 699, 709, 725, 768, 912, 985, 1262, 1268, 1296, 1307, 1356]\n",
+      "-0.01\n",
       "251    1.453\n",
       "256    1.312\n",
       "260    1.156\n",
@@ -1886,7 +1905,7 @@
     }
    ],
    "source": [
-    "print(fit_params_AUC_lagged_combined_special(splits25,splits25_YB,'AABA',10,sty=0,metric=metric_based_on_pool,beta=-1)(res_f05.loc[(res_f05[\"Ticker\"] == \"AABA\") & (res_f05[\"Percent\"] == 10)][\"Train_solution\"].iloc[0],0))\n",
+    "print(fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,'AABA',10,sty=0,metric=metric_based_on_pool,beta=-1)(res_f05.loc[(res_f05[\"Ticker\"] == \"AABA\") & (res_f05[\"Percent\"] == 10)][\"Train_solution\"].iloc[0],0))\n",
     "print(splits25[\"AABA\"][0].iloc[[251,256,260]]['open'])"
    ],
    "metadata": {
