running my own metric with ga

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1918,6 +1918,62 @@
   {
    "cell_type": "markdown",
    "source": [
+    "My own metric"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "gene_type = [[np.float64,4] for x in range(12)]+[np.uint8 for x in range(35)]# + 0,3,5,3,2,2,1,4,2,3,3,5,0,1,1,0,0,1,0,1,1,0,1\n",
+    "gene_space = [{'low':-1,'high':8}]*12+[list(range(20))]*12 + [list(range(6))]*12 + [[0,1]]*11\n",
+    "tip_mutacije = 'random'\n",
+    "st_gen = 200\n",
+    "mutacija_zamenjava = False\n",
+    "izbira_stars = 'sss'\n",
+    "pop_size = 300\n",
+    "st_stars = 30\n",
+    "\n",
+    "if os.path.isfile('./MyMresults100.pkl'):\n",
+    "    with open('MyMresults100.pkl', 'rb') as handle:\n",
+    "        print(\"work\")\n",
+    "        res_mine = pickle.load(handle)\n",
+    "else:\n",
+    "    res_mine =pd.DataFrame(columns = ['Ticker','Percent','Train_AUC','Train_solution','Test_AUC']) #{t:{p:{'train':None,'test':None} for p in [10,15,20]} for t in ticker400_data.keys()}\n",
+    "\n",
+    "\n",
+    "for t in list(ticker400_data):\n",
+    "    print(t)\n",
+    "    for percent in [10]:\n",
+    "        q = res_mine.loc[(res_mine['Ticker'] == t)& ( res_mine['Percent'] ==percent),'Test_AUC']\n",
+    "        print(q)\n",
+    "        if len(q.index)>0 and not pd.isna(q.values[0]):\n",
+    "            print(\"huh\")\n",
+    "            continue\n",
+    "        print(percent)\n",
+    "        gene_type = [[np.float64,4] for x in range(12)]+[np.uint8 for x in range(35)]\n",
+    "        cur = pygad.GA(num_genes=47,gene_space=gene_space,gene_type=gene_type,save_best_solutions=True,suppress_warnings=True,num_generations=st_gen,num_parents_mating=st_stars,fitness_func=fit_params_AUC_lagged_combined_special(splits25,splits25_YB,t,percent,sty=0,metric=fbeta_score,beta=0.5),sol_per_pop=pop_size,parent_selection_type=\"sss\",crossover_type='scattered',mutation_type='random',mutation_by_replacement=False)\n",
+    "        cur.run()\n",
+    "        besto = cur.best_solution(pop_fitness=None)\n",
+    "        res_mine = res_mine.append({'Ticker':t,'Percent':percent,'Train_AUC':besto[1],'Train_solution':besto[0],'Test_AUC':None},ignore_index=True)\n",
+    "        res_mine.loc[(res_mine['Ticker'] == t)& ( res_mine['Percent'] ==percent),'Test_AUC'] = fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,t,percent,sty=0,metric=fbeta_score,beta=0.5)(besto[0],0)\n",
+    "        res_mine.to_pickle('./MyMresults100.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "[on impact of skewness on metrics](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4285355/)\n",
     "testing other metrics on AABA:\n",
     "f0.5"
